--- a/contac.html
+++ b/contac.html
@@ -39,4 +39,10 @@
         </section>
     </main>
 </body>
+    <footer><center>
+    Candel Eduardo Gamarro<br>
+    Ave. Candelaria 3-4 zona 2<br>
+    pollocampero.com<br>
+</center></footer>
+</html>
 </html>
