--- a/galeria.html
+++ b/galeria.html
@@ -33,4 +33,9 @@
     <img src="https://cdn-menu-us-east-1.tillster.com/pc-sv/a724a3a5-c296-4d3f-b3c6-58f9d0e6776a.png">
     <img src="https://cdn-menu-us-east-1.tillster.com/pc-gt/4600e04a-ea77-4acb-b768-e62690a8c5b5.png">
 </body>
+    <footer><center>
+    Candel Eduardo Gamarro<br>
+    Ave. Candelaria 3-4 zona 2<br>
+    pollocampero.com<br>
+</center></footer>
 </html>
