--- a/proyecto.html
+++ b/proyecto.html
@@ -51,4 +51,9 @@
         </section>
     </main>
 </body>
+<footer><center>
+    Candel Eduardo Gamarro<br>
+    Ave. Candelaria 3-4 zona 2<br>
+    pollocampero.com<br>
+</center></footer>
 </html>
